# hrms-api-odoo-hack

./: .gitignore  README.md  pyproject.toml  verify_leave_feature.py  verify_leave_feature_async.py
alembic/: env.py
alembic/versions/: 0d849844f5ac_add_leave_types_and_requests.py  59c1e9944901_add_base_salary_and_payroll_updates.py  864c0b53fb31_init.py
src/: app.py  main.py
src/api/v1/: attendance.py  employees.py  payroll.py  router.py  users.py
src/attendance/: models.py  repo.py  router.py  schemas.py  services.py
src/auth/: dependencies.py  router.py
src/core/: deps.py  security.py
src/db/: base.py  session.py
src/employees/: exceptions.py  models.py  repo.py  schemas.py  services.py
src/leave/: models.py  router.py  schemas.py
src/payroll/: crud.py  models.py  repo.py  router.py  schemas.py  services.py
src/users/: models.py  repo.py  schemas.py  services.py  utils.py
